[package]
name = "swapkit-rs"
version = "0.0.9"
edition = "2021"
categories = ["api-bindings", "cryptography::cryptocurrencies"]
license = "MIT"
keywords = ["thorswap", "swapkit", "thorchain", "api"]
readme = "README.md"
description = "Unofficial Swapkit API bindings for Rust"
repository = "https://github.com/physics515/swapkit-rs"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
reqwest = "0"
thiserror = "1"
anyhow = "1"
serde_json = "1"
tokio = { version="1", features= ["macros"] }
serde_urlencoded = "0"
rand = "0"
serde-aux = "4"
chrono = { version="0", features=["serde"] }
serde_with = { version="3", features=["chrono"] }
rust_decimal = { version="1", features=["serde", "serde-str", "serde-float", "serde-with-str"] }
#rust_decimal_macros = "1"
dotenv = "0"
url = "2"

[dev-dependencies]
tokio-test = "0"

